# realtime-crypto-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/: Dockerfile  bootstrap_connections.py  requirements.txt
airflow/dags/: crypto_batch_etl.py  crypto_daily_report.py  crypto_data_quality.py
airflow/plugins/operators/: __init__.py  crypto_quality_operator.py
dashboard/: Dockerfile  app.py  requirements.txt
docs/: architecture.md  data-model.md  runbook.md
postgres/init/: 01_schemas.sql  02_seed_data.sql
producer/: Dockerfile  __init__.py  coingecko_client.py  config.py  crypto_producer.py  requirements.txt
scripts/: setup.sh  smoke.sh  start.sh  stop.sh
spark/: Dockerfile
spark/conf/: spark-defaults.conf
spark/jobs/: batch_transformer.py  streaming_aggregator.py
tests/: conftest.py  requirements.txt  test_dags.py  test_data_quality.py  test_operator.py  test_producer.py  test_spark_jobs.py
